--- a/GC/线上问题debug的一般步骤.ipynb
+++ b/GC/线上问题debug的一般步骤.ipynb
@@ -47,7 +47,7 @@
     "      这种情况可能是3种原因导致的\n",
     "        1. 接口调用比较耗时, 且不定时出现:    \n",
     "           可以通过压测加大阻塞点的出现频率, 从而在出现阻塞时, 从而通过jstack查看堆栈信息找到阻塞点\n",
-    "        2. 如果是某个功能突然出现停滞, 且无法复线  \n",
+    "        2. 如果是某个功能突然出现停滞, 且无法复线, 一般是因为锁竞争(大量线程处于waiting状态)    \n",
     "           此时, 如果只打印堆栈一次, 可能发现很多线程都是WAITING或TIMED_WAITING 状态的; 因此可以每隔10秒导出一次jstack日志, 导出3,4次后, 找到这4,5个日志中都处于停滞(WAITING)的线程(一般一个线程不会停滞二三十秒), 看这些线程是阻塞在哪行代码\n",
     "        3. 出现死锁  \n",
     "           如果出现死锁, jstack会在底部提示出现死锁, 且告知是在哪行代码等待的锁\n",
@@ -64,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -77,14 +76,16 @@
     "        1. `top`  \n",
     "          top命令的第三行表示CPU消耗\n",
     "          * us : 用户进程所占百分比; 此部分过高, 说明某个java线程占用负载过高, 或频繁发生gc  \n",
-    "          * sy : 内核进程所占百分比; 此部分过高, \n",
+    "          * sy : 内核进程所占百分比; 此部分过高, 主要是因为:  \n",
+    "              &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;java进程开启的线程比较多, 而且这些线程不断地在阻塞挂起和执行状态之间转换(等待锁, 等待IO等)\n",
     "          * ni : 使用nice命令改变优先级的任务所占百分比\n",
     "          * id : cpu空闲时间所占百分比\n",
     "          * wa : 等待IO所占百分比\n",
     "          * hi : 硬件中断所占百分比\n",
     "          * si : 软件中断所占百分比\n",
     "          <img src=\"img/top1.png\">\n",
-    "        2. `pidstat`"
+    "        2. `pidstat`\n",
+    "           "
    ]
   },
   {
