--- a/Hbase/2-Hbase系统架构.ipynb
+++ b/Hbase/2-Hbase系统架构.ipynb
@@ -54,7 +54,7 @@
     "2. 算法描述  \n",
     "    * Bloom过滤器用于判断一个元素是否在一个集合内,是一种概率数据结构  \n",
     "    它返回\"可能在集合内\"和\"绝不可能在集合内\"2个结果. 集合中的元素越多, Bloom误判成可能在集合中的概率就越大\n",
-    "    * Bloom过滤器定义k个hash函数, 和一个长度为m的bit数组.   \n",
+    "    * Bloom过滤器定义k个hash函数, 和一个长度为m的bit数组(bitmap,java中用BitSet表示).   \n",
     "    数组被初始化为全0数组, 每个哈希函数会把集合中的元素用射到数组的一个位置, 并把该位置的数组值置1.   \n",
     "    测试一个元素是否在集合中, 用预先定义的k个hash函数依次哈希该值, 得到k个位置, 查看数组中这k个位置的值是否全部是1, 有一个为0则返回\"一定不在集合中\"<img src=\"img/bloomfilter3.png\">m的选择决定了Bloom过滤器误判概率的大小  \n",
     "    * k个hash函数应该选择互相之间少有重叠的, 比如\"2次方hash,3次方hash\"  \n",
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
