--- a/Interview/6-mysql/6.Mysql.ipynb
+++ b/Interview/6-mysql/6.Mysql.ipynb
@@ -157,7 +157,15 @@
     "    * 但当 (20, F) 这样的没有 name 的数据来的时候，B+Tree 就不知道下一步该查哪个节点，因为建立搜索树的时候 name 就是第一个比较因子，必须要先根据 name 来搜索才能知道下一步去哪里查询。\n",
     "    * 比如当 (张三, F) 这样的数据来检索时，B+Tree 可以用 name 来指定搜索方向，但下一个字段 age 的缺失，所以只能把名字等于张三的数据都找到，然后再匹配性别是 F 的数据了。\n",
     "    \n",
-    "* **(附加)优化你的索引-运用Hash以及BitMap? BitMap与BloomFIlter的区别?**   \n"
+    "* **(附加)优化你的索引-运用Hash以及BitMap? BitMap与BloomFIlter的区别?**   \n",
+    "Innodb中还支持一种索引构建方式: hash索引, 拥有比B+树索引更高效的查找时间复杂度; innodb没有把它作为默认索引是因为: \n",
+    "    1. hash索引处理场景有限   \n",
+    "       Hash 索引仅仅能满足\"=\",\"IN\"和\"<=>\"查询，不能使用范围查询。\n",
+    "    2. hash索引不附带排序效果   \n",
+    "       B+树索引在索引构建完毕后, 数据就自然排序了  \n",
+    "    3. hash索引的构建方式对符合索引不利  \n",
+    "       B+树索引在构建复合索引时, 非叶子节点的查找可以先根据符合索引的key1进行比较, 在对key2进行比较. 即若对符合索引<key1,key2>构建索引后, 相当于<key1>也已经是索引; 而hash索引只能利用整个符合索引的列计算hash值, 对条件<key1>的查询无法利用已存在的符合索引<key1,key2>   \n",
+    "    4. Hash 索引遇到大量Hash值相等的情况后性能并不一定就会比B-Tree索引高。"
    ]
   },
   {
@@ -256,8 +264,33 @@
     "       若只含数值信息的字段尽量不要设计为字符型，这会降低查询和连接的性能，并会增加存储开销。这是因为引擎在处理查询和连接时会逐个比较字符串中每一个字符，而对于数字型而言只需要比较一次就够了。\n",
     "   \n",
     "* **MySQL 数据库 CPU 飙升到 500% 的话，怎么处理？**\n",
-    "\n",
-    "* **在 MySQL 服务器运行缓慢的情况下输入什么命令能缓解服务器压力？**"
+    "    1. 当 CPU 飙升到 500% 时，先用操作系统命令 top 命令观察是不是 mysqld 占用导致的，如果不是，找出占用高的进程，并进行相关处理。\n",
+    "    ```\n",
+    "    如果此时是 IO 压力比较大，可以使用 iostat 命令，定位是哪个进程占用了磁盘 IO 。\n",
+    "    ```\n",
+    "    2. 如果是 mysqld 造成的，使用 show processlist 命令，看看里面跑的 Session 情况，是不是有消耗资源的 SQL 在运行。找出消耗高的 SQL ，看看执行计划是否准确， index 是否缺失，或者实在是数据量太大造成。一般来说，肯定要 kill 掉这些线程(同时观察 CPU 使用率是否下降)，等进行相应的调整(比如说加索引、改 SQL 、改内存参数)之后，再重新跑这些 SQL。\n",
+    "    ```\n",
+    "    也可以查看 MySQL 慢查询日志，看是否有慢 SQL 。\n",
+    "    ```\n",
+    "    3. 也有可能是每个 SQL 消耗资源并不多，但是突然之间，有大量的 Session 连进来导致 CPU 飙升，这种情况就需要跟应用一起来分析为何连接数会激增，再做出相应的调整，比如说限制连接数等。\n",
+    "* **在 MySQL 服务器运行缓慢的情况下输入什么命令能缓解服务器压力？**   \n",
+    "这个回答，和上面的回答思路是差不多的，优秀在更有层次感。\n",
+    "    1. 检查系统的状态    \n",
+    "       通过操作系统的一些工具检查系统的状态，比如 CPU、内存、交换、磁盘的利用率，根据经验或与系统正常时的状态相比对，有时系统表面上看起来看空闲，这也可能不是一个正常的状态，因为 CPU 可能正等待IO的完成。除此之外，还应观注那些占用系统资源(CPU、内存)的进程。\n",
+    "        * 使用 sar 来检查操作系统是否存在 IO 问题。\n",
+    "        * 使用 vmstat 监控内存 CPU 资源。\n",
+    "        * 磁盘 IO 问题，处理方式：做 raid10 提高性能 。\n",
+    "        * 网络问题，telnet 一下 MySQL 对外开放的端口。如果不通的话，看看防火墙是否正确设置了。另外，看看 MySQ L是不是开启了 skip-networking 的选项，如果开启请关闭。\n",
+    "    2. 检查 MySQL 参数\n",
+    "    max_connect_errors  \n",
+    "    connect_timeout   \n",
+    "    skip-name-resolve   \n",
+    "    slave-net-timeout=seconds   \n",
+    "    master-connect-retry   \n",
+    "    3. 检查 MySQL 相关状态值  \n",
+    "    关注连接数  \n",
+    "    关注下系统锁情况  \n",
+    "    关注慢查询（slow query）日志  "
    ]
   },
   {
@@ -272,7 +305,40 @@
    "metadata": {},
    "source": [
     "### 14. MySQL binlog 的几种日志录入格式以及区别\n",
-    "* **Mysql一共有几中日志 ?**   \n",
+    "* **Mysql一共有几种日志 ?**   \n",
+    "    1. 错误日志(error log) : 关于mysqld的启动, 运行, 停止过程中出错的日志\n",
+    "    2. 查询日志(general query log) : 接收到的客户端statement\n",
+    "    3. 二进制日志(binary log) : 客户端发来的会改变数据的statement(用于备份)\n",
+    "    4. 转发日志(relay log) : 从master发送来的数据更改消息\n",
+    "    5. 慢查询日志(slow query log) : 记录查询时间超过`long_query`秒数的query\n",
+    "    6. DDL日志(meta log) : 记录DDL操作  \n",
+    "    \n",
+    " 除了error log自动开启,其他日志都要先配置才能开启(DDL日志不提供配置, 会在需要的时候自动记录)  \n",
+    " 查看这些日志是否开启可使用如下语法, 比如看binlog是否开启\n",
+    " ```bash\n",
+    " mysql> show variables like '%bin%';                                                                                     +--------------------------------------------+----------------------+\n",
+    "| Variable_name                              | Value                |\n",
+    "+--------------------------------------------+----------------------+\n",
+    "| bind_address                               | 127.0.0.1            |\n",
+    "| binlog_cache_size                          | 32768                |\n",
+    "| binlog_checksum                            | CRC32                |\n",
+    "| binlog_direct_non_transactional_updates    | OFF                  |\n",
+    "| binlog_error_action                        | ABORT_SERVER         |\n",
+    "....      ...     ...\n",
+    "+--------------------------------------------+----------------------+\n",
+    " ```\n",
+    " \n",
+    " * **bin log功能**\n",
+    " 记录会修改数据库的\"事件\", 比如建表, 修改表记录等. bin log有2个目的:\n",
+    "     1. 备份: master上的bin log提供数据修改的记录, 然后将这个bin log反送给slave. slave执行记录的这些\"事件\"   \n",
+    "     2. 数据恢复: 当数据库进行备份后, 执行binary log会让数据库恢复至备份点  \n",
+    "     \n",
+    "  开启bin log可能会影响一些性能\n",
+    "  \n",
+    " * **bin log的格式**\n",
+    " /etc/my.cnf\n",
+    " \n",
+    "    \n",
     "https://dev.mysql.com/doc/refman/5.7/en/binary-log.html"
    ]
   },
@@ -289,13 +355,6 @@
    "source": [
     "### 16. 聊聊 MySQL 备份方式？备份策略是怎么样的？"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
