--- a/Java NetWork/1-Linux5种IO模型.ipynb
+++ b/Java NetWork/1-Linux5种IO模型.ipynb
@@ -109,11 +109,11 @@
    "source": [
     "### 四. Zero Copy\n",
     "#### 1. **通过`FileChannel`的`transfer`实现内核态和用户态之间的零拷贝**    \n",
-    "虚拟存储技术的出现,内存划分为了内核空间和用户空间, 所有IO设备中的数据都要先复制到内核空间, 再有内核空间复制到用户空间后才能使用. 如果要在两个IO设备之间传输数据, 且其中至少有一个IO源是磁盘上的文件, 则可以使用`FileChannel`的`transferTo`或`transferFrom`, 让数据直接在内存空间上流转, 而不用经过用户空间产生多余的拷贝\n",
+    "虚拟存储技术的出现,使进程之间占用的内存不会互相干扰, 为了进一步增加安全性, 内存被划分为了内核空间和用户空间, 所有IO设备中的数据都要先复制到内核空间, 再有内核空间复制到用户空间后才能使用. 如果要在两个IO设备之间传输数据, 且其中至少有一个IO源是磁盘上的文件, 则可以使用`FileChannel`的`transferTo`或`transferFrom`, 让数据直接在内存空间上流转, 而不用经过用户空间产生多余的拷贝\n",
     "\n",
     "1. `transferFrom()`  \n",
     "如下打开两个文件channel,把数据从一个文件写入到另一个文件.\n",
-    "    * 下面的position和count用来描述源文件.\n",
+    " 下面的position和count用来描述源文件.\n",
     "    * position: 从toChannel的哪个位置开始写\n",
     "    * count: 从fromChannel中读多少数据写入 \n",
     "    * 如果FileChannel的transferFrom是SocketChannel,且将socket设置为非阻塞模式, 那么当调用transferFrom()方法时, 会立刻把数据从socket的缓冲区中读取出来; 即便读取的大小没到count指定的大小, 且后续仍会有数据从socket中来, 也不能再次写入到FileChannel中\n",
@@ -146,6 +146,10 @@
     "\n",
     "\n",
     "#### 3. **zero copy的数据传输方式**  \n",
+    "zero copy主要用到的技术是: \n",
+    "* DMA数据传输 \n",
+    "* 内存地址映射  \n",
+    "\n",
     "下图展示了通过transferTo实现数据传输的路径：\n",
     "<img src=\"img/trans1.png\" width=\"50%\">  \n",
     "下图展示了内核态、用户态的切换情况：\n",
@@ -158,6 +162,13 @@
     "1. 调用transferTo方法后数据被DMA从文件复制到了内核的一个缓冲区中；\n",
     "2. 数据不再被复制到socket关联的缓冲区中了，仅仅是将一个描述符（包含了数据的位置和长度等信息）追加到socket关联的缓冲区中。DMA直接将内核中的缓冲区中的数据传输给协议引擎，消除了仅剩的一次需要cpu周期的数据复制。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
