--- a/GC/线上问题debug的一般步骤.ipynb
+++ b/GC/线上问题debug的一般步骤.ipynb
@@ -26,15 +26,10 @@
     "    \"VM Thread\" os_prio=0 tid=0x00007f871806e000 nid=0xa runnable \n",
     "    ```\n",
     "    * 如果定位到的线程是`VM Thread`: 表示是**gc线程导致的cpu负载过高**  \n",
-    "        1. 首先通过`jatst -gcutil`确定系统运行到现在执行过多少次gc  \n",
-    "        ```bash\n",
-    "        # jstat option vmid interval(ms) count, 如下图共执行了6793次full gc\n",
-    "        ➜  d jstat -gcutil 727 10000 10                                                                                           S0     S1     E      O      M     CCS    YGC     YGCT    FGC    FGCT     GCT\n",
-    "  0.00   0.00   0.00  75.07  59.09  59.60   3259    0.919  6517    7.715    8.635 \n",
-    "  0.00   0.00   0.00   0.08  59.09  59.60   3306    0.930  6611    7.822    8.752 \n",
-    "  0.00   0.00   0.00   0.08  59.09  59.60   3351    0.943  6701    7.924    8.867 \n",
-    "  0.00   0.00   0.00   0.08  59.09  59.60   3397    0.955  6793    8.029    8.984 \n",
-    "        ```\n",
+    "        1. 首先通过`jatst -gcutil -t -h5`确定系统运行到现在执行过多少次gc  \n",
+    "            * -t : 打印系统自运行以来度过了多少秒  \n",
+    "            * -h5 : 每打印5行, 再打印一次header  \n",
+    "            * 一般使用gcutil和gccause查看gc状况, gccause输出和gcutil一样, 只多出了2列, 上次gc原因和本次gc原因<img src=\"img/jstat.png\">\n",
     "        2. 然后使用`jmap dump:format=b,file=`导出系统当前内存中的对象, 找到堆内存中哪个类的对象占比最大, 进而处理相关代码  \n",
     "           若发现内存中占用最多的对象比例也不是很高, 就要看看gc日志, 是不是调用了`System.gc()`导致的频繁full gc\n",
     "           ```bash\n",
@@ -64,6 +59,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -75,9 +71,9 @@
     "    * `top`和`pidstat`用来查看cpu的消耗状况\n",
     "        1. `top`  \n",
     "          top命令的第三行表示CPU消耗\n",
-    "          * us : 用户进程所占百分比; 此部分过高, 说明某个java线程占用负载过高, 或频繁发生gc  \n",
-    "          * sy : 内核进程所占百分比; 此部分过高, 主要是因为:  \n",
-    "              &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;java进程开启的线程比较多, 而且这些线程不断地在阻塞挂起和执行状态之间转换(等待锁, 等待IO等)\n",
+    "          * us : 用户进程所占百分比; **us过高, 表示应用程序消耗了大部分CPU. 对Java应用而言, 要找到最消耗cpu的线程所执行的代码**  \n",
+    "          * sy : 内核进程所占百分比; **sy过高, 表示ava进程开启有大量线程, 且线程在阻塞(等待锁,等待IO)和运行状态不断切换, 产生大量上下文切换**  \n",
+    "          此时查看jstack会发现有好多线程都处于TIMED_WAITING状态(调用了obj.wait(time))\n",
     "          * ni : 使用nice命令改变优先级的任务所占百分比\n",
     "          * id : cpu空闲时间所占百分比\n",
     "          * wa : 等待IO所占百分比\n",
@@ -85,7 +81,20 @@
     "          * si : 软件中断所占百分比\n",
     "          <img src=\"img/top1.png\">\n",
     "        2. `pidstat`\n",
-    "           "
+    "           * 用法 : `pidstat [ 选项 ] [ <时间间隔> ] [ <次数> ]`\n",
+    "           * 查看指定: 进程pidstat -p 进程号(ALL=全部显示) 5 2 <img src=\"img/pidstat1.png\" width=\"80%\">\n",
+    "           \n",
+    "\n",
+    "#### 2. 磁盘IO消耗分析  \n",
+    "1. Linux中, 跟踪线程的文件IO消耗, 主要是通过pidstat查看  \n",
+    "2. 格式:  \n",
+    "   `pidstat -d -t -p [进程id] interval during`  \n",
+    "    * -d: 表示disk\n",
+    "    * -t: 表示粒度到线程级查看   \n",
+    "    * 输出:  \n",
+    "        * kb_rd/s : 每秒读取的多少kb\n",
+    "        * kb_wr/s : 每秒写入多少kb\n",
+    "    <img src=\"img/io.png\" width=\"80%\">"
    ]
   },
   {
