--- a/Java Parallel program/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
+++ b/Java Parallel program/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
@@ -8,90 +8,20 @@
     "#### 1. 什么叫依赖状态的类\n",
     "* 如果类中的一些操作有基于状态的前提. 则这个类是依赖状态的\n",
     "* 类库中包含许多依赖状态的同步类, 比如FutureTask, Semaphore, BlockingQueue等.  \n",
-    "  例如不能从一个控队类中删除元素, 或者不能获取一个尚未结束的任务的计算结果\n",
+    "  例如不能从一个空队列中删除元素, 或者不能获取一个尚未结束的任务的计算结果\n",
     "  \n",
     "#### 2. 多线程下状态依赖 - 等待条件变为真\n",
     "* 单线程程序中, 条件分支依赖于某个状态, 如果这个条件不满足, 可以立刻失败, 因为该状态不会发生改变  \n",
     "* 多线程程序中, 基于状态的条件可能会被其他线程修改, 所以不能立刻进入失败分支, 而是可以**等待条件变为真**\n",
     "\n",
     "#### 3. 如何进行高效的条件等待\n",
-    "为了突出高效的条件等待方法 ,先来介绍一些低效的条件等待方法. 如下方法效率依次增高, 直到最后一种方法效率为最高:  \n",
-    "一个统一的场景, `有界队列实现`:   \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;有界队列的put和take往往包含一个前提条件,不能从空队列中获取元素, 也不能将元素放入已满的队列之中. 当条件不满足时, 可以阻塞直到对象进入正确的状态, 或抛出异常或返回一个错误状态. 如下是所有有界队列实现的父类, 定义了公用的`isFull()`和`isEmpty()`\n",
-    "```java\n",
-    "abstract class BaseBoundedQueue<V> {\n",
-    "    /**\n",
-    "     * 所有有界队列的父类, 子类来实现不同的状态依赖take(),put()方法\n",
-    "     */\n",
-    "    private final V[] buf;\n",
-    "    private int count;\n",
-    "    private int head;\n",
-    "    private int tail;\n",
-    "\n",
-    "    BaseBoundedQueue(int capacity) {\n",
-    "        this.buf = (V[]) new Object[capacity];\n",
-    "    }\n",
-    "\n",
-    "    protected synchronized final boolean isFull() {\n",
-    "        /** 判断队列是否空, 该方法因为和count状态有关, 因此需要对象的内置锁进行保护; 且该方法不允许子类覆盖*/\n",
-    "        return count == buf.length;\n",
-    "    }\n",
-    "\n",
-    "    protected synchronized final boolean isEmpty() {\n",
-    "        return count == 0;\n",
-    "    }\n",
-    "\n",
-    "    protected synchronized final void doPut(V v) {\n",
-    "        buf[tail++] = v;\n",
-    "        if (tail == buf.length)\n",
-    "            tail = 0;\n",
-    "        count++;\n",
-    "    }\n",
-    "\n",
-    "    protected synchronized final V doTake() {\n",
-    "        V v = buf[head];\n",
-    "        buf[head++] = null;\n",
-    "        if (head == buf.length)\n",
-    "            head = 0;\n",
-    "        count--;\n",
-    "        return v;\n",
-    "    }\n",
-    "\n",
-    "    protected abstract V take();\n",
-    "\n",
-    "    protected abstract void put(V v);\n",
-    "}\n",
-    "\n",
-    "\n",
-    "```\n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;为了突出高效的条件等待方法 ,先来介绍一些低效的条件等待方法. 如下方法效率依次增高, 直到最后一种方法效率为最高:  \n",
+    "一个统一的场景, `有界队列实现`; 有界队列的put和take往往包含一个前提条件,不能从空队列中获取元素, 也不能将元素放入已满的队列之中. 当条件不满足时, 可以阻塞直到对象进入正确的状态, 或抛出异常或返回一个错误状态. 如下是所有有界队列实现的父类, 定义了公用的`isFull()`和`isEmpty()`\n",
+    "<img src=\"img/aqs1.png\" width=\"85%\">\n",
     "1. 方法一 : **将条件检测的失败状态传递给调用者(抛异常或返回一个错误值)**   \n",
     "   该方法下, 如果条件依赖检查失败, 直接在方法中抛异常通知调用者. 这看起来实现简单, 但使用起来有2个问题\n",
     "    1. 依赖不满足只是当下不满足, 而不是发生了异常\n",
-    "    2. 调用者每次调用必须做好捕获异常的准备, 且在异常发生时主动重试\n",
-    "  ```java\n",
-    "    class GrumpyBoundedQueue<V> extends BaseBoundedQueue<V>{\n",
-    "        public GrumpyBoundedQueue(int capacity) {\n",
-    "            /** 构造器 */\n",
-    "            super(capacity);\n",
-    "        }\n",
-    "\n",
-    "        @Override\n",
-    "        public synchronized V take() {\n",
-    "            /** 检查队列空, 则抛出异常 */\n",
-    "            if(isEmpty())\n",
-    "                throw new RuntimeException(\"empty queue\");\n",
-    "            return doTake();\n",
-    "        }\n",
-    "\n",
-    "        @Override\n",
-    "        public synchronized void put(V v) {\n",
-    "            /** 检查队列满, 抛出异常 */\n",
-    "            if(isFull())\n",
-    "                throw new RuntimeException(\"full queue\");\n",
-    "            doPut(v);\n",
-    "        }\n",
-    "    }\n",
-    "  ```\n",
+    "    2. 调用者每次调用必须做好捕获异常的准备, 且在异常发生时主动重试<img src=\"img/aqs11.png\" width=\"60%\">\n",
     "    3. 客户调用者捕获异常后, 可以有两种重试选择 :   \n",
     "        * 自行进入休眠   \n",
     "        catch块中进行`Thread.sleep()`\n",
@@ -121,41 +51,7 @@
     "    1. 该方法也是先进行条件检查, 然后执行方法; 但会在检查失败后自行重试      \n",
     "       首先, 状态条件的检查必须在锁的保护下进行.     \n",
     "       其次, 如果测试失败, 当前执行的线程应该释放锁并休眠一段时间, 让其他线程能够访问内部的buf; 当线程醒来后, 将重新请求锁并再次进行重试. 因而, 线程将反复的在条件检查,休眠,获取锁释放锁的等待过程中切换.     \n",
-    "    2. 该方法实际将跑出异常那个方法中, 调用者的重试逻辑放到了方法内部进行; 使方法内部处理重试逻辑, 客户端只负责简单调用.\n",
-    "    ```java\n",
-    "    class SleepBoundedQueue<V> extends BaseBoundedQueue<V>{\n",
-    "        private static int SLEEP_TIME=1000;\n",
-    "        public SleepBoundedQueue(int capacity) {\n",
-    "            /** 构造器 */\n",
-    "            super(capacity);\n",
-    "        }\n",
-    "\n",
-    "        @Override\n",
-    "        public V take() throws InterruptedException {\n",
-    "            /** 获取锁检查条件, 若队列空, 释放锁睡眠一段时间 */\n",
-    "            while(true){\n",
-    "                // 条件检查必须在持有锁的情况下进行\n",
-    "                synchronized (this){\n",
-    "                    if(!isEmpty())\n",
-    "                        return doTake();\n",
-    "                }\n",
-    "                Thread.sleep(SLEEP_TIME);\n",
-    "            }\n",
-    "        }\n",
-    "\n",
-    "        @Override\n",
-    "        public void put(V v) throws InterruptedException {\n",
-    "            /** 获取锁检查条件, 若队列满, 释放锁睡眠一段时间 */\n",
-    "            while(true){\n",
-    "                synchronized (this){\n",
-    "                    if(!isFull())\n",
-    "                        doPut(v);\n",
-    "                }\n",
-    "                Thread.sleep(SLEEP_TIME);\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "    ```\n",
+    "    2. 该方法实际将跑出异常那个方法中, 调用者的重试逻辑放到了方法内部进行; 使方法内部处理重试逻辑, 客户端只负责简单调用.<img src=\"img/aqs12.png\" width=\"68%\">\n",
     "    3. 睡眠时间间隔选择   \n",
     "       要选择合适的睡眠时间, 需要在响应性和CPU使用率之间权衡. 睡眠时间小, 响应性就高, 但消耗的CPU资源也高   \n",
     "    4. 展望  \n",
@@ -164,7 +60,7 @@
     "* 方法三: **使用条件队列**\n",
     "    1. 条件队列:    \n",
     "       条件队列的名字来源于: 使\"等待某个条件为真\"的线程加入到一个队列中.   \n",
-    "       一般队列中每个元素都是数据, 而条件队列中每个元素是一个线程\n",
+    "       一般队列中每个元素都是数据, 而**条件队列中每个元素是一个线程**\n",
     "    2. 一个对象就是一个条件队列   \n",
     "        * 正如每个对象都可以是一个锁一样, 每个对象也可以作为一个条件队列; 对象的wait(), notify()构成了使用内部条件队列的API   \n",
     "        * 对象的内置锁和内置条件队列是相互关联的, 要调用对象X内置条件队列的任意一个方法, 必须先持有对象X的内置锁. 这也是因为 \"等待由状态构成的条件\" 和 \"维护状态的一致性\" 两种机制必须紧密地绑定在一起\n",
@@ -172,75 +68,96 @@
     "            1. 会释放锁, 并请求操作系统挂起当前线程. 使其他线程能够获取这个锁并修改对象的状态.   \n",
     "            2. wait()醒来时, 将在返回之前重新获取锁.   \n",
     "            3. wait()通常写在while循环内部. 由于代码可能出现bug, 线程不一定是在条件满足后醒来, 还可能在条件处于任意状态下被错误唤醒, 因此线程醒来后需要重新判断依赖条件是否为true  \n",
-    "        * 使用条件队列完成条件状态依赖, 和轮训休眠拥有相同的语义. 如果某个功能使用 \"轮训和休眠\" 无法完成, 那么使用条件队列也无法完成;    \n",
-    "        ```java\n",
-    "        class BoundedQueue<V> extends BaseBoundedQueue<V>{\n",
-    "\n",
-    "            // 条件谓词: not-full (!isFull())\n",
-    "            // 条件谓词: not-empty (!isEmpty())\n",
-    "\n",
-    "            public BoundedQueue(int capacity) {\n",
-    "                /** 构造器 */\n",
-    "                super(capacity);\n",
-    "            }\n",
-    "\n",
-    "            @Override\n",
-    "            public synchronized V take() throws InterruptedException {\n",
-    "                /** 阻塞直到not-empty, this对象即是锁, 又是条件队列 */\n",
-    "                while(isEmpty()){\n",
-    "                    wait();\n",
-    "                }\n",
-    "                V v = doTake();\n",
-    "                notifyAll();\n",
-    "                return v;\n",
-    "            }\n",
-    "\n",
-    "            @Override\n",
-    "            public synchronized void put(V v) throws InterruptedException {\n",
-    "                /** 阻塞直到not-full, this对象即是锁, 又是条件队列 */\n",
-    "                while(isFull()){\n",
-    "                    wait();\n",
-    "                }\n",
-    "                doPut(v);\n",
-    "                notifyAll();\n",
-    "            }\n",
-    "        }\n",
-    "        ```"
+    "        * 使用条件队列完成条件状态依赖, 和轮训休眠拥有相同的语义. 如果某个功能使用 \"轮训和休眠\" 无法完成, 那么使用条件队列也无法完成;<img src=\"img/aqs13.png\" width=\"70%\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 二. 使用条件队列  \n",
+    "### 二. 使用条件队列的注意事项  \n",
+    "条件队列使得构建高响应性对的状态依赖类变得容易, 但很容易造成误用; 因此使用时必须注意以下几点  \n",
+    "#### 2.1 条件谓词\n",
+    "1. 什么是条件谓词   \n",
+    "    * 条件谓词: 是使某个操作变为状态依赖操作的前提. 要想正确使用条件队列, 关键是找出对象在哪个条件谓词上等待  \n",
+    "    * 有界队列中, 只有当缓存不为空的时候, take()才能执行, 否则必须等待; 因此, take()的条件谓词是\"队列不为空\"  \n",
+    "      同样, put()只有在队列不满的情况下才能执行, 否则必须等待, 因此, put()的条件谓词是\"队列不满\"   \n",
+    "      \n",
+    "2. 怎么写条件谓词  \n",
+    "   条件谓词是由类中各个状态变量构成的表达式  \n",
+    "   \n",
+    "3. 条件谓词如何实现条件等待  \n",
+    "    * 条件等待中有一个重要的三元组关系: 加锁; wait()方法; 条件谓词\n",
+    "        * 锁加在状态变量上\n",
+    "        * 状态变量表达式构成了条件谓词\n",
+    "        * 一个条件谓词若判断为false, 则当前线程加入锁对应的条件队列并挂起\n",
+    "    * 因为条件谓词中包含多个状态变量, 而这些状态变量需要由同一个锁来保护, 所以在判断条件谓词为true或false之前必须先持有这个锁 \n",
+    "    \n",
+    "#### 2.2 过早唤醒\n",
+    "1. 什么情况会引起过早唤醒(条件谓词不满足时就被唤醒)     \n",
+    "由于条件队列可以和多个条件谓词配合使用, 因此, 当一个挂起在wait()上的线程被notifyALL()唤醒时, 并不意味着该线程正在等待的条件谓词变成了true \n",
+    " 而且wait()方法还能执行有限时间的挂起, 超市后自动就会唤醒. 因此, 将条件谓词的检查放在while循环中是必要的的\n",
     "\n",
-    "#### 1. 条件谓词\n",
+    "#### 2.3 丢失的信号\n",
+    "1. wait()和notify()要有先后顺序?  \n",
+    " 如果线程A在一个条件队列上执行了notify(), 而线程B随后才在这个条件队列上等待, 那么线程B将不会被线程A唤醒, 只能等待下一个notify()信号到来. 这就是线程A的信号丢失\n",
     "\n",
+    "#### 2.4 通知\n",
+    "1. **条件等待的必要操作: 通知**  \n",
+    "    1. 前面介绍的都是条件谓词的检查, 条件谓词不满足时线程加入条件队列进行等待; 还有另一半重要内容: 通知: \n",
+    "        * notify() : 从条件列中选择一个线程唤醒\n",
+    "        * notifyAll() : 把条件队列中所有的线程全部唤醒  \n",
+    "    2. 发出通知的线程应该尽快释放锁  \n",
+    "       线程调用notify()后, 虽然唤醒了其它线程进入锁的争抢, 但并未释放锁; 所以应该尽快释放锁, 让其它线程能够立马争取锁, 争取成功的线程会从wait()处的代码唤醒  \n",
+    "    2. 上面的有界队列中, 如果队列为空, 则take()操作陷入等待, 当队列不为空时, take()操作返回; 因此必须确保每条会导致队列非空的操作都能发出一个通知, 通知take()可以返回了. 由于导致队列非空的操作时put(), 所以每次put()都要发起对条件队列的通知notifyAll()   \n",
+    "    \n",
+    "2. **使用notify()通知时危险的**   \n",
+    "  由于线程会因为不同的条件谓词不满足而进入同一个条件队列, 如果使用notify()通知而不是notifyAll()通知就会很危险, 因为单一的通知很容易导致类似于信号丢失的问题: \n",
+    "    ``` \n",
+    "    比如, 线程A在条件队列中等待条件谓词PA, 线程B在条件队列中等待条件谓词PB, 此时线程C执行一个notify(), JVM选择线程A唤醒, 但线程A发现条件谓词并不满足进而进入挂起等待, 而其实线程C的操作可以让条件谓词PB满足, 但是线程B没能被唤醒, 造成了线程C的通知丢失\n",
+    "    ```\n",
+    "3. 单次通知(notify())的严格条件    \n",
+    "通过以上分析, 只有下面2个条件同时满足时, 才可以使用notify()进行通知: \n",
+    "    * **只有1个条件谓词和条件队列相关**,\n",
+    "    * **且条件变量上的每次通知最多只能唤醒一个线程**\n",
+    "    \n",
+    " 次时才能使用notify()发出通知\n",
     "\n",
-    "#### 2. 过早唤醒\n",
-    "\n",
-    "\n",
-    "#### 3. 丢失的信号\n",
-    "\n",
-    "#### 4. 通知\n",
-    "\n",
-    "\n",
-    "#### 5. 示例: 条件队列实现阀门类\n",
-    "\n",
-    "#### 6. 子类的安全问题\n",
-    "\n"
+    "3. **条件通知 - 使用条件优化notifyAll()通知**   \n",
+    "有些开发人员认为\"完全使用notifyAll()代替notify()\"是低效的, 大多数情况下这种低效影响很小, 但有时候可能很大. 比如: \n",
+    "```\n",
+    "假设有10个线程在条件队列上等待, 当某个线程执行notifyAll()后, 10个线程全部唤醒, 并在锁上进行竞争. 然而, 他们中的大多数唤醒后仍发现条件谓词不满足而又重回到挂起, 这会产生大量的上下文切换和锁竞争\n",
+    "```\n",
+    " 事实上, 条件等待版本的有界队列实现中, put()和take()的通知机制是保守的: 每当放入一个对象或从队列中取走一个对象就发起一次通知. 我们可以对其优化:\n",
+    "     * 首先, 仅当队列从空变为非空时, 或者从满变为不满时才释放一个线程\n",
+    "     * 并且, 仅当put()或take()影响到这些状态转换时才发出通知<img src=\"img/aqs114.png\" width=\"70%\">\n",
+    " 条件通知(条件判断下的notifyAll())和单次通知(notify)可以提升性能但却很难实现, 因此使用时应当谨慎, 只有在保证程序在notifyAll()下已经正常执行后, 再使用这个优化措施"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. `boolean tryAcquire(int arg)`\n",
-    "2. `boolean tryRelease(int arg)`\n",
+    "### 三. 显式的Condition对象\n",
+    "Condition是一种广义的锁, 当然也是一种广义的条件队列; 有时使用内置锁过于灵活也可以使用广义锁  \n",
     "\n",
+    "#### 3.1 一个广义锁可以关联多个条件队列  \n",
+    "1. 内置锁的弊端和内置锁notifyAll()的局限   \n",
+    "内置条件队列的一个缺陷时, 每个内置锁只能和一个内置条件队列关联. 像上面的有界队列, 多个线程可能会在同一个条件队列上等待不同的条件谓词, 这使得无法满足\"在调用notifyAll()时唤醒的的线程都是同一类型的需求\". 如果要编写带有多个条件谓词的并发对象, 就可以使用显式的Lock和Condition, 而不是内置锁和条件队列\n",
     "\n",
-    "1. `int tryAcquireShared(int arg)`\n",
-    "2. `boolean tryReleaseShared(int arg)`"
+    "2. ReentrantLock与Condition对象  \n",
+    "    * 一个Condition和一个Lock关联在一起, 但是一个Lock可以和多个Condition关联在一起\n",
+    "    * 每个Condition代表一个条件队列, Conditiopn对象会继承Lock对象的公平性: 对于公平锁, 线程会依照FIFO的顺序从Condition.await()中被释放\n",
+    "    ```\n",
+    "    Condition对象的等待和通知方法分别是: await(),signal()和signalAll(). 但是因为Condition扩展了Object, 所以它也有wait()和notify()方法. 使用时一定要调用正确的方法 - await()和signal()\n",
+    "    ```\n",
+    "    \n",
+    "3. Condition实现的有界队列  \n",
+    "    * 因为有界队列有2个谓词, \"非空\"和\"非满\", 所以可以用2个条件谓词(2个Condition对象): notFull和notEmpty;   \n",
+    "      当队列为空时, take()挂起并等待notEmpty, 此时put()向notEmpty发送信号, 解除阻塞在take()中的线程   <img src=\"img/aqs21.png\" width=\"83%\">\n",
+    "    * 使用多个Condition时, 比分析一个使用单一内部队列加多个条件谓词的类简单的多. 通过把条件谓词分开并放入到2个等待线程集合中, Condition更容易满足单次通知的需求. signal()比signalAll()更高效, 它能极大的减少每次唤醒操作产生的上写文切换和锁请求次数\n",
+    "    \n",
+    "#### 3.2 RentrantLock和Semaphore的共性"
    ]
   },
   {
@@ -248,7 +165,13 @@
    "metadata": {},
    "source": [
     "### 二. 如何使用AbstractQueuedSynchronizer构建同步类\n",
-    "<img src=\"img/aqsdemo.png\" width=\"70%\">\n"
+    "<img src=\"img/aqsdemo.png\" width=\"65%\">\n",
+    "1. `boolean tryAcquire(int arg)`\n",
+    "2. `boolean tryRelease(int arg)`\n",
+    "\n",
+    "\n",
+    "1. `int tryAcquireShared(int arg)`\n",
+    "2. `boolean tryReleaseShared(int arg)`"
    ]
   },
   {
