--- a/Java Parallel program/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
+++ b/Java Parallel program/Java并发编程实践/14-条件等待-Condition和AQS.ipynb
@@ -91,7 +91,8 @@
     "        * 锁加在状态变量上\n",
     "        * 状态变量表达式构成了条件谓词\n",
     "        * 一个条件谓词若判断为false, 则当前线程加入锁对应的条件队列并挂起\n",
-    "    * 因为条件谓词中包含多个状态变量, 而这些状态变量需要由同一个锁来保护, 所以在判断条件谓词为true或false之前必须先持有这个锁 \n",
+    "    * 因为条件谓词中包含多个状态变量, 而这些状态变量需要由同一个锁来保护, 所以在判断条件谓词为true或false之前必须先持有这个锁   \n",
+    "    * 基于以上2点, `状态变量->条件谓词->条件等待队列->锁`之间的关系克表示如下<img src=\"img/aqs11122.png\" width=\"90%\">  \n",
     "    \n",
     "#### 2.2 过早唤醒\n",
     "1. 什么情况会引起过早唤醒(条件谓词不满足时就被唤醒)     \n",
