--- a/Java Parallel program/Java并发编程实践/5-并发工具类.ipynb
+++ b/Java Parallel program/Java并发编程实践/5-并发工具类.ipynb
@@ -34,6 +34,59 @@
     "    * (2) 1.8里的ConcurrentHashMap的put操作, 由分段锁变为synchronized + cas操作. 当哈希表要插入1个节点时, 由于 ConcurrentHashMap采用\"独立\"链法进行冲突解决, 在形同桶上冲突的节点形成单链表, 因此插入时尝试在该链表的结尾插入, 插入时synchronized的锁为该链表的头结点, 即实现了更细粒度的锁分离. 插入成功后, 通过cas操作更新整个哈希表的节点个数.  \n",
     "        * \"独立链\"的散列冲突在1.8的一个优化是: 如果冲突链表的长度>8. 会转变成红黑树的结构进行插入, 从O(N)降低为O(logN)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 三. CountDowLatch\n",
+    "1. 用法  \n",
+    "    * CountDowLatch用来同步一个或多个线程, 强制这些线程等待由其它线程执行的一组操作完成\n",
+    "    * 可以向CountDowLatch设置一个初始计数, 任何在这个对象上调用**wait()方法**的线程都会阻塞挂起, **等待内部计数值为0**    \n",
+    "      其它线程在完成工作时, 可以调用CountDowLatch的**countDown()方法来减小计数值**\n",
+    "    * CountDowLatch的计数值不能被重置, 因此, 一旦一个CountDowLatch对象的计数值到达0, 就再也无法提供阻塞功能; 要使用可重置计数版本的CountDowLatch, 可以使用CyclicBarrier\n",
+    "\n",
+    "2. 示例  \n",
+    "  Task类随机休眠一段时间, 模拟这部分工作的完成; WaitingTask表示系统中必须要等待的部分, 要等待问题的初始部分完成为止  \n",
+    "<img src=\"img/Countdownlatch.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 四. CyclicBarrier\n",
+    "1. CyclicBarrier表示什么意思   \n",
+    "CyclicBarrier适合这样的情况: 有一个任务A需要等待其它一组任务Group全都完成之后再执行; 当任务A执行完毕后, A再次等待任务组Group全部执行完再执行. 相当于这是一个一组任务和一个任务之间交替等待的过程<img src=\"img/cycicbarrier.png\" width=\"75%\">\n",
+    "\n",
+    "2. CyclicBarrier构造函数  \n",
+    "构造器: **public CyclicBarrier(int parties, Runnable barrierAction)**, 有两个参数\n",
+    "    * parties: CyclicBarrier计数器初始值(也是线程组的线程个数)  \n",
+    "    * barrierAction: 当计数器值变为0时执行该线程(同时线程组所有线程执行完毕)  \n",
+    "    \n",
+    " CyclicBarrierCyclicBarrier只有一个方法: `await()`, 当线程组的一个线程执行完后, 要调用`await()`方法让CyclicBarrier内部的计数器值-1, 当内部计数值变为0时, barrierAction线程就会执行, 当这个线程执行完后, 计数器重置为初始值, 且调用`await()`的线程组中的线程会返回继续执行\n",
+    " \n",
+    "3. 使用CyclicBarrier进行仿真赛马游戏  \n",
+    " 游戏说明: 一个赛马比赛, 跑到长度为`FINISH_LINE`, 有`nHorses`匹马进行比赛. 每次让每匹马随机的跑n步, 循环进行, 直到有一匹马先跑完整个赛道获得冠军\n",
+    "    * 马匹<img src=\"img/horse.png\" width=\"85%\">\n",
+    "    * 比赛<img src=\"img/horserace.png\" width=\"100%\">\n",
+    "    * 测试<img src=\"img/testhorse.png\" width=\"100%\">\n",
+    "    * 输出 <img src=\"img/horseout.png\" width=\"85%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 五. Exchanger\n",
+    "1. Exchanger用处  \n",
+    "Exchanger是2个线程之间交换对象的栅栏; 它的典型应用场景是: 一个线程在创建对象.这些对象的床架代价高昂, 而另一个线程在消费对象. 通过这种方式, 可以有更多的对象在被创建的同时被消费\n",
+    "2. 方法  \n",
+    "     当一个线程调用exchange()方法时将会阻塞挂起, 直到另一个线程也调用了exchange()方法时, 2个线程的exchange()可以运行完毕, 而持有的对象将会交换  \n",
+    "3. 仿真  \n",
+    "    如下创建了2个线程的单一Exchanger, Producer用于在CopyOnWriteList中塞入数据, Consumer使用Exchanger和Producer交换构造好的list消费其中的对象(使用remove元素的方式模拟消耗对象). CopyOnwriteList不会产生并发修改异常, 但会频繁触发gc\n",
+    "<img src=\"img/exchanger.png\">"
+   ]
   }
  ],
  "metadata": {
