--- a/Java Parallel program/Java并发编程实践/5-并发工具类.ipynb
+++ b/Java Parallel program/Java并发编程实践/5-并发工具类.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "2. 示例  \n",
     "  Task类随机休眠一段时间, 模拟这部分工作的完成; WaitingTask表示系统中必须要等待的部分, 要等待问题的初始部分完成为止  \n",
-    "<img src=\"img/Countdownlatch.png\">"
+    "<img src=\"img/countdownlatch.png\">"
    ]
   },
   {
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
