--- a/Distributed System/1-Paxos算法.ipynb
+++ b/Distributed System/1-Paxos算法.ipynb
@@ -23,9 +23,9 @@
     "  3. learners  \n",
     "工程实现上, 3个角色并非分成独立的进程, 一个进程可以同时是这3种角色\n",
     "\n",
-    "#### 二. 共识算法啊的基本假设  \n",
-    "1. 三种agent角色的处理速度任意快慢, 并可能宕机重启. 所有的agent都可能在最终值产生后宕机和重启, 这种情况只能让agent能够记录自己宕机和重启前的值  \n",
-    "2. agent之间可以传递任意长的消息, 且消息可能由于网络原因而导致重复, 丢失, 但消息不会被篡改而错乱\n",
+    "#### 二. 共识算法的基本假设  \n",
+    "1. 假设**三种agent角色的处理速度任意快慢**, 并可能宕机重启. 所有的agent都可能在最终值产生后宕机和重启, 这种情况只能让agent能够记录自己宕机和重启前的值  \n",
+    "2. 假设agent之间可以传递任意长的消息, 且**消息可能由于网络原因而导致重复, 丢失**, 但**消息不会被篡改**而错乱\n",
     "\n"
    ]
   },
@@ -140,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
