--- a/Interview/hive.ipynb
+++ b/Interview/hive.ipynb
@@ -59,10 +59,18 @@
     "  ```\n",
     "  \n",
     "#### 4. 什么时候需要合并文件   \n",
+    "* 什么时候会出现小文件\n",
+    "    1. 动态分区插入数据，产生大量的小文件，从而导致map数量剧增。\n",
+    "    2. reducer数量太多\n",
+    "    3. 数据源本身就包含大量的小文件\n",
+    "\n",
+    "\n",
     "* 输入时合并文件 :  通过控制split大小控制mapper个数\n",
     "   ```\n",
     "   mapred.min.split.size : split的最小size（默认值1B）\n",
-    "   mapred.max.split.size : split的最大size（默认值64MB)\n",
+    "   mapred.max.split.size=256000000;  \n",
+    "   mapred.min.split.size.per.node=100000000 : 一个交换机下split的至少的大小(这个值决定了多个交换机上的文件是否需要合并)\n",
+    "   mapred.min.split.size.per.rack=100000000 : 执行Map前进行小文件合并(100M)\n",
     "   ```\n",
     "* 输出合并文件控制 :  \n",
     "   ```\n",
@@ -117,9 +125,7 @@
     "#### 8. 分区表和分桶表的区别\n",
     "* 分区表: Hive 数据表可以根据某些字段进行分区操作，细化数据管理，让部分查询更快，不同分区对应不同的目录；  \n",
     "* 分桶表：表和分区也可以进一步被划分为桶，分桶是相对分区进行更细粒度的划分。分桶将整个数据内容按照某列属性值的hash值进行区分，不同的桶对应不同的文件。\n",
-    "\n",
-    "\n",
-    "#### 9. hive的orc文件"
+    "\n"
    ]
   },
   {
