--- a/设计模式/创建模式/1-单例模式.ipynb
+++ b/设计模式/创建模式/1-单例模式.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[https://mp.weixin.qq.com/s?__biz=MzAxMjEwMzQ5MA==&mid=2448888343&idx=2&sn=64a2c677786aaabe751b44c42c81e0f1&chksm=8fb5483ab8c2c12ce5395d20f2234a09cd9f6a55b7f9cd22d6f7aee818458fbed89c04b287e5&scene=21#wechat_redirect](https://mp.weixin.qq.com/s?__biz=MzAxMjEwMzQ5MA==&mid=2448888343&idx=2&sn=64a2c677786aaabe751b44c42c81e0f1&chksm=8fb5483ab8c2c12ce5395d20f2234a09cd9f6a55b7f9cd22d6f7aee818458fbed89c04b287e5&scene=21#wechat_redirect)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
